# supyagent

./: .gitignore  CLAUDE.md  GOALS.md  LICENSE  README.md  build_and_deploy.sh  pyproject.toml
.claude/skills/: supy.md
agents/: assistant.yaml  coder.yaml  middle.yaml  planner.yaml  researcher.yaml  summarizer.yaml  test2.yaml  test_planner.yaml  tester.yaml  vision.yaml  worker.yaml  writer.yaml
integration_guides/ai-sdk/: README.md
live_testing_10/: GOALS.md
live_testing_10/powers/: __init__.py  shell.py  web.py
live_testing_11/: GOALS.md
live_testing_11/agents/: assistant.yaml
live_testing_11/powers/: patch.py
live_testing_12/: GOALS.md  IMPLEMENTATION_SUMMARY.md  README.md  content_templates.md  lead_generation_strategy.md  metrics_tracking_template.md  quick_start_action_plan.md
live_testing_12/agents/: assistant.yaml  coder.yaml  writer.yaml
live_testing_12/automation/: README.md  email_outreach.py  github_monitor.py  reddit_monitor.py  requirements.txt  twitter_monitor.py
live_testing_12/powers/: files.py
live_testing_8/agents/: live_testing_8.yaml
live_testing_8/powers/: search.py
live_testing_9/: GOALS.md
live_testing_9/agents/: planner.yaml
plans/: dx_improvements.md  hero.md  improvements_plan.md  initial_plan.md
powers/: files.py  find.py  image_gen.py  shell.py
scripts/: release.sh
sprints/: README.md  sprint_10_robustness.md  sprint_1_foundation.md  sprint_2_sessions.md  sprint_3_repl.md  sprint_4_execution.md  sprint_5_multiagent.md  sprint_6_polish.md  sprint_7_context_management.md  sprint_8_process_supervisor.md  sprint_9_architecture.md
supyagent/: __init__.py  __main__.py
supyagent/cli/: __init__.py  hello.py  main.py  skills.py  ui.py
supyagent/core/: __init__.py  agent.py  browser_daemon.py  browser_session.py  config.py  context.py  context_manager.py  credentials.py  daemon.py  delegation.py  engine.py  executor.py  llm.py  memory.py  model_registry.py  models.py  orchestrator.py  process_tools.py  registry.py  sandbox.py  service.py  session_manager.py  supervisor.py  telemetry.py  tokens.py  tools.py  workspace.py
supyagent/default_agents/: __init__.py  assistant.yaml  coder.yaml  planner.yaml  writer.yaml
supyagent/default_tools/: __init__.py  browser.py  edit.py  files.py  find.py  git.py  plan.py  search.py  shell.py  web.py
supyagent/models/: __init__.py  agent_config.py  context.py  memory.py  session.py  tool_result.py
supyagent/server/: __init__.py  app.py  dependencies.py  models.py  stream.py
supyagent/server/protocol/: __init__.py  base.py  data_stream.py
supyagent/server/routes/: __init__.py  agents.py  chat.py  health.py  sessions.py  tools.py
supyagent/server/ui/: __init__.py  launcher.py
supyagent/server/ui/routes/: __init__.py  agents.py  common.py  hello.py  models.py
supyagent/server/ui/templates/: __init__.py  agents.html  base.html  hello.html  models.html
supyagent/utils/: __init__.py  binary.py  media.py  paths.py
supypowers/: browser.py  files.py  image_gen.py  shell.py  weather.py
tests/: __init__.py  conftest.py  test_agent.py  test_agent_config.py  test_binary.py  test_browser_session.py  test_cli.py  test_cli_ui.py  test_connect.py  test_context_manager.py  test_credentials.py  test_daemon.py  test_default_agents.py  test_default_tools_browser.py  test_default_tools_edit.py  test_default_tools_files.py  test_default_tools_find.py  test_default_tools_git.py  test_default_tools_patch.py  test_default_tools_plan.py  test_default_tools_search.py  test_default_tools_shell.py  test_default_tools_web.py  test_delegation.py  test_delegation_nested.py  test_e2e_service.py  test_executor.py  test_hello.py  test_image_gen.py  test_llm_retry.py  test_media.py  test_model_registry.py  test_multimodal.py  test_parallel_tools.py  test_registry.py  test_sandbox.py  test_server.py  test_server_protocol.py  test_service.py  test_service_integration.py  (+11 more)
tools/: web_search.py
